# fletcher

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  404.html  BuildGTest.cmake  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  azure-pipelines.yml  env.sh  index.html  print.html  searchindex.js  searchindex.json
codegen/cerata/: CMakeLists.txt  README.md
codegen/cerata/src/cerata/: api.h  arrays.cc  arrays.h  domain.cc  domain.h  edge.cc  edge.h  edges.cc  edges.h  expression.cc  expression.h  flattype.cc  flattype.h  flattypes.cc  flattypes.h  graph.cc  graph.h  graphs.cc  graphs.h  literal.cc  logging.cc  logging.h  node.cc  node.h  node_array.cc  node_array.h  nodes.cc  nodes.h  object.cc  object.h  objects.cc  objects.h  output.cc  output.h  pool.cc  pool.h  port.cc  transform.cc  transform.h  type.cc  (+5 more)
codegen/cerata/test/cerata/: test.cc  test_designs.h  test_expressions.cc  test_expressions.h  test_pool.h  test_types.cc  test_types.h
codegen/cpp/cerata/: CMakeLists.txt  Doxyfile  README.md
codegen/cpp/dag/: CMakeLists.txt
codegen/cpp/fletchgen/: CMakeLists.txt  Doxyfile  README.md
codegen/fletchgen/: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
codegen/fletchgen/fletchgen/primmap/: primmap.vhd
codegen/fletchgen/fletchgen/stringread/: stringread.tcl
codegen/fletchgen/src/: arbiter.cc  arbiter.h  arrow-meta.cc  arrow-meta.h  arrow-utils.cc  arrow-utils.h  column-wrapper.cc  column-wrapper.h  column.cc  column.h  common.cc  common.h  components.cc  components.h  config.cc  config.h  constants.h  design.cpp  design.h  edges.cc  edges.h  flattypes.cc  flattypes.h  fletcher-ports.cc  fletcher-ports.h  fletcher-streams.cc  fletcher-streams.h  fletcher_components.cc  fletcher_components.h  fletcher_types.cc  fletcher_types.h  fletchgen.cc  graphs.cc  graphs.h  logging.h  meta.h  nodes.cc  nodes.h  printers.cc  printers.h  (+12 more)
codegen/fletchgen/src/dot/: dot.cc  dot.h  style.cc  style.h
codegen/fletchgen/src/fletchgen/: array.cc  array.h  basic_types.cc  basic_types.h  bus.cc  bus.h  column.cc  column.h  constants.h  core.cc  core.h  design.cc  design.h  (+19 more)
codegen/fletchgen/test/: test-generate.cc  test.cc  test_designs.h  test_expressions.h  test_recordbatches.cc  test_recordbatches.h  test_schemas.cc  test_schemas.h  test_types.h
common/: CMakeLists.txt
common/c/: CMakeLists.txt
common/cpp/: CMakeLists.txt
common/cpp/src/: fletcher.h
common/cpp/test/: test-common.cc  test-generate.cc  test_generate.cc  test_generate.h  test_recordbatches.cc  test_recordbatches.h  test_schemas.cc  test_schemas.h
common/include/fletcher/: fletcher.h  logging.h
common/src/fletcher/: arrow-recordbatch.h  arrow-schema.cc  arrow-utils.cc  hex-view.cc  hex-view.h
common/test/fletcher/: test-common.cc  test_generate.cc  test_generate.h  test_recordbatches.cc  test_schemas.h  test_visitors.h
examples/: CMakeLists.txt  README.md
examples/filter/software/: CMakeLists.txt
examples/filter_hls/hardware/: axi_top.vhd  filter.rb  filter.srec  filter_hls.cpp  filter_hls_fletchbkb.vhd  filter_hls_fletcher.vhd  filter_out.srec  filter_read.fbs  filter_sim.tcl  filter_usercore.vhd  filter_wrapper.vhd  filter_write.fbs  sim_top.vhd
examples/filter_hls/software/: CMakeLists.txt
examples/k-means/: kmeans_sim.vhd
examples/k-means/hardware/: accumulator.vhd  adder.vhd  adder_tree.vhd  axi_funnel.vhd  axi_top.vhd  distance.vhd  divider.vhd  filter.vhd  fletcher_wrapper.vhd  kmeans.vhd  kmeans_sim.vhd  mask.vhd  point_accumulators.vhd  selector.vhd  selector_tree.vhd  square.vhd
examples/k-means/hardware-gen/: CMakeLists.txt  fletchgen-command.txt  schema.cpp  srec2aws.py
examples/k-means/software/: CMakeLists.txt  kmeans.cpp
examples/map/: .gitignore
examples/map/hardware/: Makefile  ext.yaml  generate-input.py
examples/nullable-sum/hardware/: .gitignore  generate-input.py
examples/regexp/: .gitignore  README.md
examples/regexp/hardware/: arrow_regexp.vhd  arrow_regexp_pkg.vhd  arrow_regexp_unit.vhd  axi_read_converter.vhd  test.txt
examples/regexp/software/: CMakeLists.txt  RegExUserCore.cpp  regexp.cpp
examples/stringwrite/hardware/: .gitignore  Makefile  UTF8StringGen.vhd  axi_top.vhd  axi_write_converter.vhd  generate-hardware.sh  generate-schema.py  simulate-hardware.sh  stringwrite.vhd  stringwrite_pkg.vhd  stringwrite_usercore.vhd  stringwrite_wrapper.vhd
examples/stringwrite/software/: CMakeLists.txt  StringWriteUserCore.cpp  StringWriteUserCore.h  stringwrite.cpp
examples/sum/: .gitignore  README.md
examples/sum-fast/: README.md
examples/sum-fast/hardware/: axi_top.vhd  fletcher_wrapper.vhd  sum.vhd
examples/sum/hardware/: .gitignore  Makefile  axi_top.vhd  fletcher_wrapper.vhd  generate-hardware.sh  generate-input.py  generate-recordbatch.ipynb  generate-schema.ipynb  generate-sim-recordbatch.ipynb  sum.vhd
examples/sum/hardware-gen/: CMakeLists.txt  schema.cpp
examples/sum/software/: CMakeLists.txt  sum.cpp
integrations/vivado_hls/: CMakeLists.txt
runtime/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
runtime/cpp/: CMakeLists.txt  Doxyfile  README.md
runtime/cpp/src/: context.cpp  context.h  fletcher.h  platform.cpp  platform.h  status.h
runtime/cpp/test/: test.cpp
runtime/include/: fletcher.h
runtime/include/fletcher/: FPGAPlatform.h  UserCore.h  common.h  fletcher.h  logging.h
runtime/python/: .gitignore  ABI_Problems.txt  HISTORY.md  MANIFEST.in  README.md  requirements.txt  setup.py  sum.py  test.py
runtime/python/pyfletcher/: __init__.pxd  __init__.py  context.pxi  error.pxi  kernel.pxi  lib.cpp  lib.h  lib.pyx  lib_api.h  platform.pxi  platforms.pxi  public-api.pxi  setup.py  status.pxi  usercore.pxi  usercore.py
runtime/python/testing/: sum.py  test.py
runtime/python/tests/: test_platform.py
runtime/src/: FPGAPlatform.cpp  FPGAPlatform.h  UserCore.cpp  UserCore.h  common.h  fletcher.h  logging.h
runtime/src/aws/: aws.cpp  aws.h
runtime/src/echo/: echo.cpp  echo.h
runtime/src/fletcher/: FPGAPlatform.cpp  UserCore.cpp
runtime/src/snap/: snap.cpp
(+1817 files in other folders)
